--- a/client/package.json
+++ b/client/package.json
@@ -7,11 +7,17 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "nouislider-react": "^3.3.7",
     "react": "^16.13.1",
+    "react-accessible-accordion": "^3.0.1",
     "react-dom": "^16.13.1",
-    "react-loader-spinner": "^3.1.5",
+    "react-dropdown": "^1.7.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-scroll-up-button": "^1.6.4",
+    "react-slick": "^0.25.2",
+    "react-tabs": "^3.1.0",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
